# deathroll

./: .gitignore  Cargo.toml  README.md  Trunk.toml  dockerfile  index.html  manifest.json  prod.sh  start_service_worker.js
.github/workflows/: docker_build.yml
frontend/: Cargo.toml  README.md  Trunk.toml  index.html  manifest.json  service_worker.js  start_service_worker.js
frontend/src/: chat_bus.rs  homepage.rs  lib.rs  main.rs  notfound.rs  pve_component.rs  pvp_component.rs  routes.rs  ws.rs
frontend/src/components/: cpu.rs  homepage.rs  mod.rs  multiplayer.rs  notfound.rs
frontend/src/services/: feed_bus.rs  mod.rs  websockets.rs
server/: Cargo.toml  README.md
server/src/: README.md  game_server.rs  main.rs  websockets.rs  ws.rs
src/: deathroll_component.rs  homepage.rs  homepage_component.rs  main.rs  pve_component.rs  pvp_component.rs
target-trunk/: .rustc_info.json
target-trunk/debug/.fingerprint/autocfg-b100abef6c63027d/: lib-autocfg  lib-autocfg.json
target-trunk/debug/.fingerprint/boolinator-760079c769103587/: lib-boolinator  lib-boolinator.json
target-trunk/debug/.fingerprint/bumpalo-72d154955b0068ec/: lib-bumpalo  lib-bumpalo.json
target-trunk/debug/.fingerprint/cfg-if-ac68a5ec1f1c024f/: lib-cfg-if  lib-cfg-if.json
target-trunk/debug/.fingerprint/futures-channel-24f42acc86f8b365/: build-script-build-script-build  build-script-build-script-build.json
target-trunk/debug/.fingerprint/futures-core-db7a6b4219a4ad73/: build-script-build-script-build  build-script-build-script-build.json
target-trunk/debug/.fingerprint/futures-macro-0f999fd90f29ce6a/: lib-futures-macro  lib-futures-macro.json
target-trunk/debug/.fingerprint/futures-task-5873816a735a5f62/: build-script-build-script-build  build-script-build-script-build.json
target-trunk/debug/.fingerprint/futures-util-0fcf97477ae581cb/: build-script-build-script-build  build-script-build-script-build.json
target-trunk/debug/.fingerprint/indexmap-d8bb6d4241c0f066/: build-script-build-script-build  build-script-build-script-build.json
target-trunk/debug/.fingerprint/log-51b95cf5dec4df73/: build-script-build-script-build  build-script-build-script-build.json
target-trunk/debug/.fingerprint/log-64d46b3ad8b42c68/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-trunk/debug/.fingerprint/log-92e1fc28847caead/: lib-log  lib-log.json
target-trunk/debug/.fingerprint/log-c56e4c4a93355d37/: build-script-build-script-build  build-script-build-script-build.json
target-trunk/debug/.fingerprint/memchr-a715959dca1c5edc/: build-script-build-script-build  build-script-build-script-build.json
target-trunk/debug/.fingerprint/once_cell-3fc9ecbffbfda6fb/: lib-once_cell  lib-once_cell.json
target-trunk/debug/.fingerprint/pin-project-internal-df381dc1144d28d4/: lib-pin-project-internal  lib-pin-project-internal.json
target-trunk/debug/.fingerprint/prettyplease-69d8cd592ee9720e/: lib-prettyplease  lib-prettyplease.json
target-trunk/debug/.fingerprint/prettyplease-8bfe0fa225c6390b/: run-build-script-build-script-build  run-build-script-build-script-build.json
target-trunk/debug/.fingerprint/prettyplease-b097a22e9b2a11fc/: build-script-build-script-build  build-script-build-script-build.json
target-trunk/debug/.fingerprint/proc-macro-error-1bb0f332d16c7f67/: lib-proc-macro-error  lib-proc-macro-error.json
target-trunk/debug/.fingerprint/quote-424fde2f7d4271e1/: lib-quote  (+1 more)
target-trunk/wasm-bindgen/debug/: frontend-1da2ad4dd18ae684.js  frontend-1da2ad4dd18ae684_bg.wasm
target-trunk/wasm-bindgen/release/: frontend-47feac922bd80507.js  frontend-47feac922bd80507_bg.wasm
target-trunk/wasm32-unknown-unknown/debug/: frontend.d
target-trunk/wasm32-unknown-unknown/release/: frontend.d  frontend.wasm
(+473 files in other folders)
