[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
web-sys = "0.3.57"
log = "0.4.6"
wasm-logger = "0.2.0"
rand = "0.8.5"
getrandom = { version = "0.2", features = ["js"] }
futures = "0.3"
nanoid = "0.4.0"
gloo-net = "0.2.5"
yew-agent = "0.2.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1.7.0"