[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.6.1", features = ["ws", "headers"] }
tower-http = { version = "0.3.5", features = ["full"] }
axum-extra = { version = "^0.4.2", features = ["spa"] }
headers = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }