[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["ws", "headers"] } 
tokio = { version = "1.0", features = ["full"] }
futures = "0.3.25"
anyhow = "1.0.67"
rand = "0.8.5"
axum-extra = { version = "^0.4.2", features = ["spa"] }
async-session = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tower-cookies = "0.8.0"
