[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["ws", "headers"] } 
tokio = { version = "1.23.0", features = ["full"] }
futures = "0.3.25"
anyhow = "1.0.68"
rand = "0.8.5"
axum-extra = { version = "^0.4.2", features = ["spa"] }
uuid = { version = "1.2.2", features = ["v4", "serde"] }
tower-cookies = "0.8.0"
serde = {version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
